--- a/cv/scss/main.scss
+++ b/cv/scss/main.scss
@@ -4,6 +4,10 @@
 
 $title: normal 24px/1.5 sans-serif;
 
+#johan {
+  display: none;
+}
+
 html,body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
